tests/ui/missing_attribute_exit_code_table.rs
use derive_termination::ExitCodeTable;

#[derive(ExitCodeTable)]
enum Error {
    #[exit_code(0)]
    Ok,
    Missing,
}

fn main() {}
